# enn-sdk-samples-9925

./: LICENSE  README.md  THIRD-PARTY-LICENSES  THIRD-PARTY-LICENSES.md
depth-estimation/: README.md  settings.gradle
depth-estimation/app/: build.gradle
depth-estimation/app/src/main/: AndroidManifest.xml
depth-estimation/gradle/wrapper/: gradle-wrapper.properties
image-classification/: README.md  settings.gradle
image-classification/app/: build.gradle
image-classification/app/src/main/: AndroidManifest.xml
image-classification/gradle/wrapper/: gradle-wrapper.properties
image-enhance/: README.md  settings.gradle
image-enhance/app/: build.gradle
image-enhance/app/src/main/: AndroidManifest.xml
image-enhance/gradle/wrapper/: gradle-wrapper.properties
nnc-model-tester/: README.md  build_ndk_linux.sh  build_ndk_windows.bat
nnc-model-tester/jni/: Android.mk  enn_nnc_model_tester.cpp
nnc-model-tester/jni/include/: enn_nnc_model_tester.h
nnc-model-tester/libs/arm64-v8a/: enn_nnc_model_tester
object-detection/: README.md
object-detection/app/: build.gradle
object-detection/app/src/main/: AndroidManifest.xml
object-detection/gradle/wrapper/: gradle-wrapper.properties
perf-compare/: README.md  settings.gradle
perf-compare/app/: build.gradle
pose-estimation/: README.md  settings.gradle
pose-estimation/app/: build.gradle
pose-estimation/app/src/main/cpp/: CMakeLists.txt  enn_jni.cc
pose-estimation/gradle/wrapper/: gradle-wrapper.properties
segmentation/: README.md  settings.gradle
segmentation/app/: build.gradle
(+145 files in other folders)
